# duckdb-zarr

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  description.yml  pyproject.toml
.github/workflows/: MainDistributionPipeline.yml  duckdb-version-drift.yml  rust-quality.yml
docs/: README.md  design.md  domains.md  ome-zarr.md
scripts/: generate_fixtures.py
src/: lib.rs  read_zarr.rs  read_zarr_groups.rs  read_zarr_metadata.rs  replacement_scan.rs
src/zarr_reader/: duckdb_store.rs  meta.rs  mod.rs  scan.rs
test/sql/: bioimage_ome_zarr.test  read_zarr.test
