[package]
name = "duckdb_zarr"
version = "0.1.0"
edition = "2021"
description = "DuckDB extension for querying Zarr array stores with SQL"
repository = "https://github.com/alxmrs/duckdb-zarr"
license = "MIT"
keywords = ["duckdb", "zarr", "xarray", "sql", "netcdf"]
categories = ["database", "science"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[[example]]
# crate-type can't be (at the moment) be overriden for specific targets
# src/wasm_lib.rs forwards to src/lib.rs so that we can change from cdylib
# (that is needed while compiling natively) to staticlib (needed since the
# actual linking will be done via emcc
name = "duckdb_zarr"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
duckdb = { version = "=1.10502.0", features = ["loadable-extension"] }
# Base zarrs features: no blosc here — blosc_src bundles pthreads that conflict
# with Rtools42's libpthread on windows_amd64_mingw (x86_64-pc-windows-gnu).
# Blosc is re-added below for all other targets.
zarrs = { version = "0.23", default-features = false, features = [
    "ndarray",
    "filesystem",
    "gzip",
    "zstd",
    "crc32c",
    "sharding",
    "transpose",
] }
ndarray = "0.17"
serde_json = "1"
base64 = "0.22"
zarrs_http = "0.3.1"

# zarrs_http → reqwest → native-tls → openssl-sys. On Linux the DuckDB CI sets
# OPENSSL_DIR to a vcpkg path that doesn't exist. Vendored mode compiles OpenSSL
# from source and ignores OPENSSL_DIR entirely. macOS and Windows provide TLS via
# Security.framework / SChannel, so vendoring is unnecessary there.
[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

# Enable blosc everywhere except x86_64-pc-windows-gnu (Rtools42/mingw).
# SKIP_TESTS=1 for that target so blosc is never exercised there in CI.
[target.'cfg(not(all(target_os = "windows", target_env = "gnu")))'.dependencies]
zarrs = { version = "0.23", default-features = false, features = ["blosc"] }
